k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
name: payment-service
labels:
app: payment-service
spec:
type: ClusterIP
selector:
app: payment-service
ports:
- name: http
port: 80
targetPort: 8080
